<resources>
    <string name="app_name">Movies</string>
    <string name="movie_catalog">Movie Catalog</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="already_registered">Already registered</string>
    <string name="login_here">Login here</string>
    <string name="email">Email</string>
    <string name="send">send</string>
    <string name="forgotten_password">Forgot Password</string>
</resources>